# python-fluent-breaking-standards

./: README.rst  pyproject.toml
fluent.runtime/: setup.py
fluent.runtime/fluent/runtime/: prepare.py  types.py  utils.py
fluent.syntax/fluent/syntax/: parser.py
fluent/runtime/fluent/runtime/: bundle.py  types.py  utils.py
