[tool.poetry]
name = "fluent"
version = "0.1.0"
description = ""
authors = ["RootShinobi"]
readme = "README.rst"

[tool.poetry.dependencies]
fluent-syntax = { path = "./fluent/syntax" }
fluent-runtime = { path = "./fluent/runtime" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
