[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluent"
version = "0.1.0"
description = ""
authors = [
    { name = "RootShinobi" },
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "attrs>=23.2.0",
    "babel>=2.14.0",
    "pytz>=2023.3",
    "typing-extensions>=3.7,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["fluent.runtime/fluent", "fluent.syntax/fluent"]


[tool.hatch.build.targets.sdist]
only-include = ["fluent.runtime/fluent", "fluent.syntax/fluent"]